<resources>
    <string name="app_name">fitness-app</string>
    <string name="title_measurement">Measure</string>
    <string name="title_quests">Quests</string>
    <string name="title_achievements">Achievements</string>
    <string name="title_profile">Profile</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_tasks">Tasks</string>
    <string name="fragment_track_sub_categories_sub_title">Select a sub category.</string>
    <string name="fragment_new_task_bottom_sheet_dialog_new_task_title">New Task</string>
    <string name="fragment_new_task_bottom_sheet_dialog_new_task_subject_hint">Write your new userTask here…</string>
    <string name="cancel_title">Cancel</string>
    <string name="save_title">Save</string>
    <string name="task_title">Title</string>
    <string name="task_item_mark_complete_today">Completed Today</string>
    <string name="task_item_mark_uncomplete_today">Uncompleted Today</string>
    <string name="task_status_title">Status</string>
    <string name="fragment_tasks_new_task">New Task</string>
    <string name="fragment_task_edit_edit_task">Edit Task</string>
    <string name="fragment_task_edit_Task_title">Task</string>
    <string name="fragment_task_edit_calendar_functionality_description">You can mark and un-mark dates on the calendar for when you completedCount the given userTask or not.</string>
    <string name="confirm_delete_dialog_delete_header">Delete</string>
    <string name="confirm_delete_dialog_sure_to_delete_message">Are you sure you want to delete this?</string>
    <string name="fragment_tasks_completed_today_chip_text">Completed Today</string>
    <string name="fragment_task_edit_future_dates_not_acceptable">You cannot mark a future dates as complete.</string>
    <string name="completedOutOfTotal">%1$d/%2$d</string>
    <string name="status_title">Status</string>
    <string name="fragment_achievement_entry_request_achievement_approval">Request Approval</string>
    <string name="achievement_status_accepted">Accepted</string>
    <string name="achievement_status_pending">Pending Approval</string>
    <string name="achievement_status_declined">Declined</string>
    <string name="achievement_status_not_requested">Not Requested</string>
    <string name="quest_status_accepted">Accepted</string>
    <string name="quest_status_pending">Pending Approval</string>
    <string name="quest_status_declined">Declined</string>
    <string name="quest_status_not_requested">Not Requested</string>
    <string name="login_activity_email">Email</string>
    <string name="login_activity_password">Password</string>
    <string name="login_activity_login">Login</string>
    <string name="login_activity_sign_up">Sign Up</string>
    <string name="dialog_signup_email">Email</string>
    <string name="dialog_signup_username">Username</string>
    <string name="dialog_signup_password">Password</string>
    <string name="dialog_signup_create_account">Create Account</string>
    <string name="fragment_quest_approval_requests_user">User</string>
    <string name="fragment_quest_approval_requests_date_requested">Date Requested</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="achievement_points_title">Achievement Points</string>
    <string name="created_date_title">Date Created</string>
    <string name="total_players_completed_title">Total Players Completed</string>
    <string name="achievement_type_title">Achievement Type</string>
    <string name="required_level">Required Level</string>
    <string name="experience_points_title">Experience Points</string>
    <string name="quest_expire_date">Quest Expire Date</string>
    <string name="completed_title">Completed</string>
    <string name="players_completed_title">Players Completed</string>
    <string name="progress_title">Progress</string>
    <string name="date_requested_title">Date Requested</string>
    <string name="user_note_title">User\'s Note</string>
    <string name="no_description">No Description</string>
    <string name="level_to_high">Level to High</string>
    <string name="expired">Expired</string>
    <string name="request_approval_title">Request Approval</string>
    <string name="username_title">Username</string>
    <string name="decline_title">Decline</string>
    <string name="approve_title">Approve</string>
    <string name="your_mail">Your Email</string>
    <string name="website_title">Website</string>
    <string name="facebook_title">Facebook</string>
    <string name="change_app">Change App</string>
    <string name="sign_out">Sign Out</string>

</resources>
