<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primaryBackground"
    android:orientation="vertical"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <com.example.fitness_app.views.IconView
        android:id="@+id/dialog_confirm_delete_icon_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/icon_delete"
        android:textColor="@color/cancel"
        android:textSize="20dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@+id/dialog_confirm_delete_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_confirm_delete_header"
        style="@style/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/confirm_delete_dialog_delete_header"
        android:textColor="@color/header_text"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_confirm_delete_icon_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dialog_confirm_delete_icon_delete"
        app:layout_constraintTop_toTopOf="@+id/dialog_confirm_delete_icon_delete" />

    <TextView
        android:id="@+id/dialog_confirm_delete_under_header"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_confirm_delete_icon_delete"
        android:text="@string/confirm_delete_dialog_sure_to_delete_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        style="@style/bodyText"/>

    <Button
        android:id="@+id/dialog_confirm_delete_cancel"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/cancel_button_background"
        android:text="@string/cancel_title"
        android:textAllCaps="false"
        android:textColor="@color/icon_color"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_confirm_delete_delete_button"
        app:layout_constraintEnd_toStartOf="@+id/dialog_confirm_delete_delete_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dialog_confirm_delete_delete_button" />

    <Button
        android:id="@+id/dialog_confirm_delete_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/cancel_button_background"
        android:text="@string/save_title"
        android:textAllCaps="false"
        android:textColor="@color/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/dialog_confirm_delete_cancel"
        app:layout_constraintTop_toBottomOf="@+id/dialog_confirm_delete_under_header"
        app:layout_goneMarginBottom="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>