<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primaryBackground"
    android:orientation="vertical"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <com.example.fitness_app.views.IconView
        android:id="@+id/fragment_new_task_bottom_sheet_dialog_task_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/icon_task"
        android:textColor="@color/text"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_new_task_bottom_sheet_dialog_title"
        style="@style/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/fragment_new_task_bottom_sheet_dialog_new_task_title"
        android:textColor="@color/header_text"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_new_task_bottom_sheet_dialog_task_icon"
        app:layout_constraintBottom_toTopOf="@+id/fragment_new_task_bottom_sheet_dialog_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/fragment_new_task_bottom_sheet_dialog_task_icon"
        app:layout_constraintTop_toTopOf="@+id/fragment_new_task_bottom_sheet_dialog_task_icon" />

    <EditText
        android:id="@+id/fragment_new_task_bottom_sheet_dialog_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/fragment_new_task_bottom_sheet_dialog_new_task_subject_hint"
        android:inputType="textMultiLine"
        android:isScrollContainer="true"
        android:maxLength="2000"
        android:maxLines="4"
        android:minLines="1"
        android:padding="10dp"
        android:scrollbars="vertical"
        android:textColor="@color/text"
        android:textColorHint="@color/mutedText"
        app:layout_constraintBottom_toTopOf="@+id/fragment_new_task_bottom_sheet_dialog_save_button"
        app:layout_constraintEnd_toEndOf="@+id/fragment_new_task_bottom_sheet_dialog_title"
        app:layout_constraintStart_toStartOf="@+id/fragment_new_task_bottom_sheet_dialog_task_icon"
        app:layout_constraintTop_toBottomOf="@+id/fragment_new_task_bottom_sheet_dialog_title"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/fragment_new_task_bottom_sheet_dialog_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/cancel_button_background"
        android:text="@string/cancel_title"
        android:textAllCaps="false"
        android:textColor="@color/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_new_task_bottom_sheet_dialog_save_button"
        app:layout_constraintEnd_toStartOf="@+id/fragment_new_task_bottom_sheet_dialog_save_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragment_new_task_bottom_sheet_dialog_save_button" />

    <Button
        android:id="@+id/fragment_new_task_bottom_sheet_dialog_save_button"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/cancel_button_background"
        android:text="@string/save_title"
        android:textAllCaps="false"
        android:textColor="@color/accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/fragment_new_task_bottom_sheet_dialog_cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/fragment_new_task_bottom_sheet_dialog_task"
        app:layout_goneMarginBottom="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>