<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primaryBackground"
    android:orientation="vertical"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    app:layout_constraintEnd_toEndOf="@+id/dialog_signup_password_value"
    app:layout_constraintStart_toStartOf="@+id/dialog_signup_password_value"
    app:layout_constraintTop_toBottomOf="@+id/dialog_signup_password_value"

    <EditText
        android:id="@+id/dialog_signup_email_value"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Enter your email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/accent"
        android:textColorHint="@color/bb_inActiveBottomBarItemColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/dialog_signup_createBtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/cancel_button_background"
        android:text="@string/dialog_signup_create_account"
        android:textAllCaps="false"
        android:textColor="@color/accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/dialog_signup_password_value"
        app:layout_constraintStart_toStartOf="@+id/dialog_signup_password_value"
        app:layout_constraintTop_toBottomOf="@+id/dialog_signup_password_value"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/dialog_signup_password_value"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Enter password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/accent"
        android:textColorHint="@color/bb_inActiveBottomBarItemColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/dialog_signup_username_value"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Enter desired username"
        android:inputType="textLongMessage"
        android:textAlignment="center"
        android:textColor="@color/accent"
        android:textColorHint="@color/bb_inActiveBottomBarItemColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dialog_signup_username"
        android:textAlignment="center"
        android:textColor="@color/accent"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/dialog_signup_email"
        android:textAlignment="center"
        android:textColor="@color/accent"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_signup_username_value" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/dialog_signup_password"
        android:textAlignment="center"
        android:textColor="@color/accent"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_signup_email_value" />

</androidx.constraintlayout.widget.ConstraintLayout>